2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-util.in,
	* bin/pocc-make: Improve upgrade mechanism.

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Simplify PolyLib's bootstrap.

2011-06-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* driver/src/Makefile.am,
	* driver/pocc/Makefile.am: Add irconverter module as a default
	compiled module.

	* driver/pocc/driver-ptile.c: Move the core of the driver to the
	PTile module, where it belongs.

2011-06-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/driver.cfg,
	* config/base/configure.cfg: Upgrade to the latest version of
	CLooG and ISL, add irconverter module.

2011-06-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-make: Allow absolute path in bootstrap command.

	* doc/pocc.texi,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/local/configure.cfg,
	* config/stable/configure.cfg: Update accordingly.

2011-05-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c: Pretty-print meta-info in PAST.

2011-05-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* doc/pocc.texi: Use AC_SEARCH_LIBS instead of AC_CHECK_LIB.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Compile PTile by default.

	* driver/pocc/driver-ptile.c: Remove conditional compilation if in
	release mode.

2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg: Update to latest version of ISL and
	CLooG, add ptile.
	* config/base/driver.cfg: Configure ptile by default.
