@@ -83,10 +83,10 @@ retrieve-method: local
 configure: --with-piplib=$poccsrcdir/math/install-piplib
 make-depends: piplib
 
-[polylib-5.22.1]
+[polylib-5.22.5]
 category: math
 module: polylib
-location: archives/polylib-5.22.1.tar.gz
+location: archives/polylib-5.22.5.tar.gz
 retrieve-method: local
 
 [piplib-1.3.6-patched]
