@@ -83,10 +83,10 @@ retrieve-method: wget
 configure: --with-piplib=$poccsrcdir/math/install-piplib
 make-depends: piplib
 
-[polylib-5.22.1]
+[polylib-5.22.5]
 category: math
 module: polylib
-location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/polylib-5.22.1.tar.gz
+location: http://www.cse.ohio-state.edu/~pouchet/software/pocc/download/modules/polylib-5.22.5.tar.gz
 retrieve-method: wget
 
 [piplib-1.3.6-patched]
